force-app/main/default/objects/CSR_Transaction__c/CSR_Transaction__c.object-meta.xml
<CustomObject>
    <label>CSR Transaction</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>CSR Transaction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CSR Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>