force-app/main/default/objects/CSR_Transaction__c/fields/CSR__c.field-meta.xml
<CustomField>
    <fullName>CSR__c</fullName>
    <label>CSR</label>
    <length>100</length>
    <type>Text</type>
</CustomField>