force-app/main/default/objects/CSR_Transaction__c/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <description>How long did the TrueCost conversation last? (minutes)</description>
    <formula>min((Stop__c - Start__c)*24*60, 10)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>How long did the TrueCost conversation last? (minutes)</inlineHelpText>
    <label>Duration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>