force-app/main/default/objects/CSR_Transaction__c/fields/Outcome__c.field-meta.xml
<CustomField>
    <fullName>Outcome__c</fullName>
    <description>How did the interaction end?</description>
    <inlineHelpText>How did the interaction end?</inlineHelpText>
    <label>Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Phone Transfer</fullName>
            </value>
            <value>
                <fullName>Decline</fullName>
            </value>
            <value>
                <fullName>Invalid Zip Code</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>