force-app/main/default/objects/CSR_Transaction__c/fields/Start__c.field-meta.xml
<CustomField>
    <fullName>Start__c</fullName>
    <description>When did the CSR begin talking to customer about TrueCost</description>
    <inlineHelpText>When did the CSR begin talking to customer about TrueCost</inlineHelpText>
    <label>Start</label>
    <type>DateTime</type>
</CustomField>