force-app/main/default/objects/CSR_Transaction__c/fields/Stop__c.field-meta.xml
<CustomField>
    <fullName>Stop__c</fullName>
    <description>When did the CSR finish talking about TrueCost</description>
    <inlineHelpText>When did the CSR finish talking about TrueCost</inlineHelpText>
    <label>Stop</label>
    <type>DateTime</type>
</CustomField>